# EtlReverseEngineering

./: .gitignore  README.md  pyproject.toml
.planning/: GSD-start-up.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
Documentation/: README.md  agent-integration.md  fbr-gauntlet.md  state-machine-overview.md  transition-logic.md  triage-pipeline.md
blueprints/: _conventions.md  artifact-reviewer.md  bdd-reviewer.md  bdd-writer.md  brd-reviewer.md  brd-writer.md  builder.md  data-profiler.md  dependency-analyst.md  evidence-auditor.md  fsd-reviewer.md  fsd-writer.md  job-executor.md  og-flow-analyst.md  og-locator.md  output-analyst.md  pat-fix.md  proofmark-builder.md  proofmark-executor.md  proofmark-reviewer.md  publisher.md  signoff.md  source-analyst.md  test-executor.md  test-reviewer.md  test-writer.md  triage-brd-checker.md  triage-code-checker.md  triage-fix.md  triage-fsd-checker.md  triage-orchestrator.md  triage-pm-checker.md  triage-rca.md  triage-reset.md
job-confs/: account_overdraft_history_re.json  branch_directory_re.json  card_authorization_summary_re.json  card_status_snapshot_re.json  compliance_resolution_time_re.json  customer_account_summary_re.json  customer_segment_map_re.json  daily_wire_volume_re.json  fee_waiver_analysis_re.json  merchant_category_directory_re.json  overdraft_fee_summary_re.json  preference_change_count_re.json  preference_trend_re.json  securities_directory_re.json  top_branches_re.json  top_holdings_by_value_re.json  transaction_size_buckets_re.json
jobs/: .gitignore
sql/: RE_status.sql
(+179 files in other folders)
