[project]
name = "workflow-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["structlog>=25.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
